--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card mt-5">
+          <div class="card-header">Login</div>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="email" class="p-1">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+              </div>
+              <div class="form-group mt-1">
+                <label for="password" class="p-1">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+              </div>
+              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Login</button>
+            </form>
+          </div>
+        </div>
+        <div class="text-center justify-content-between d-flex mt-3">
+          <a href="">Forgot password?</a>
+          <a href="">Sign up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
