--- a/src/app/auth/otp-verification/otp-verification.component.html
+++ b/src/app/auth/otp-verification/otp-verification.component.html
@@ -1,1 +1,24 @@
-<p>otp-verification works!</p>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card mt-5">
+          <div class="card-header">Otp Verification</div>
+          <div class="card-body">
+            <form [formGroup]="verificationForm">
+              <div class="form-group">
+                <label for="verificationCode" class="p-1">Verification code</label>
+                <ng-otp-input formControlName="verificationCode" [config]="otpConfig"></ng-otp-input>
+                <small class="text-muted">A code has been sent to <b>nsengvalens4@gmail.com</b></small>
+              </div>
+              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Proceed</button>
+            </form>
+          </div>
+        </div>
+        <div class="text-center justify-content-between d-flex mt-3">
+          <a href=""></a>
+          <a href="">Back to login</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
