--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card mt-5">
-          <div class="card-header">Reset Password</div>
+          <div class="card-header">Register</div>
           <div class="card-body">
             <form>
               <div class="form-group">
@@ -14,14 +14,15 @@
                 <div class="form-group mt-1">
                     <label for="password" class="p-1">Verification Code</label>
                     <ng-otp-input [config]="otpConfig"></ng-otp-input>
+                    <small class="text-muted">A code has been sent to <b>nsengvalens4@gmail.com</b></small>
                   </div>
                   <div class="form-group mt-1">
-                    <label for="password" class="p-1">New Password</label>
+                    <label for="password" class="p-1">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="Password">
                   </div>
               </div>
               
-              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Reset Account</button>
+              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Register</button>
             </form>
           </div>
         </div>
