--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,35 +1,43 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card mt-5">
-          <div class="card-header">Reset Password</div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="email" class="p-1">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-header">Reset Password</div>
+        <div class="card-body">
+         
 
-              <div class="w-100">
-                <div class="form-group mt-1">
-                    <label for="password" class="p-1">Verification Code</label>
-                    <ng-otp-input [config]="otpConfig"></ng-otp-input>
-                  </div>
-                  <div class="form-group mt-1">
-                    <label for="password" class="p-1">New Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password">
-                  </div>
-              </div>
-              
-              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Reset Account</button>
-            </form>
+            <div class="form-group">
+              <label for="email" class="p-1">Email address</label>
+              <input type="email" [(ngModel)]="email" class="form-control" required id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+
+            <form [formGroup]="formGroup" *ngIf="is_code_sent">
+            <div class="form-group">
+              <label for="code" class="p-1">Verification Code</label>
+              <ng-otp-input  name="code" [formCtrl]="otpControl"  [config]="{length:6}"></ng-otp-input>
+              <small class="text-muted">Verification code has sent to <i>{{email}}</i></small>
+            </div>
+
+            <div class="form-group mt-1 mb-1">
+              <label for="password" class="p-1">Password</label>
+              <input type="password" class="form-control" formControlName="password" required id="password" placeholder="Password">
+              <small class="text-danger" *ngIf="passwordErrorMessage">{{passwordErrorMessage}}</small>
+            </div>
+          </form>
+
+          <div class="alert alert-danger mt-1 mb-1 p-2" role="alert" *ngIf="errorMsg">
+            {{errorMsg}}
           </div>
+
+          <button *ngIf="!is_code_sent" type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="sendOtp()">Reset password</button>
+          <button *ngIf="is_code_sent" type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="onSubmit()">Proceed</button>
         </div>
-        <div class="text-center justify-content-between d-flex mt-3">
-          <a href=""></a>
-          <a href="">Back to login</a>
-        </div>
+      </div>
+      <div class="text-center justify-content-between d-flex mt-3">
+        <a href=""></a>
+        <a href="" routerLink="/auth/login">Back to login</a>
       </div>
     </div>
   </div>
-  
+</div>
+
