--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,15 +13,15 @@
             <div class="alert alert-danger mt-1 mb-1 p-2" role="alert" *ngIf="errorMsg">
               {{errorMsg}}
             </div>
-            <div class="alert alert-danger mt-1 mb-1 p-2" role="alert" *ngIf="errorMsg">
-              {{errorMsg}}
-            </div>
-            <button type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="onSubmit()">Login</button>
+            <button type="submit" class="btn btn-primary btn-block mt-3 w-100" (click)="onSubmit()">Login</button>
           </div>
         </div>
         <div class="text-center justify-content-between d-flex mt-3">
           <a href="" routerLink="/auth/reset-password">Forgot password?</a>
-          <a href="" routerLink="/auth/register">Sign up</a>
+          <div class="end-section">
+            <a class="me-3 magic-link" (click)="getMagicLink()">Login with magic link</a>
+            <button class="border border-0 text-white bg-primary">Sign up</button>
+          </div>
         </div>
       </div>
     </div>
