--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -5,3 +5,11 @@
 a{
     text-decoration: none;
 }
+
+.border-0{
+    border-radius: 8px !important;
+}
+
+.magic-link{
+    cursor: pointer !important;
+}
