--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="container">
     <div class="content d-flex flex-column align-items-center justify-content-center">
-        <p>Hello <span class="text-warning">John Doe</span>!</p>
+        <p>Hello <span class="text-warning" *ngIf="!profile?.last_name">{{profile?.email}}</span> <span class="text-warning" *ngIf="profile?.last_name">{{profile?.first_name}} {{profile?.last_name}}</span>!</p>
         <div class="display-6">
             Welcome to UMS
         </div>
+        <br>
+        <a routerLink="../profile" *ngIf="!profile?.last_name">Your account is not completed yet, click here to complete your profile!</a>
     </div>
 </div>
