--- a/src/app/pages/modal/profile-pic-modal/profile-pic-modal.component.html
+++ b/src/app/pages/modal/profile-pic-modal/profile-pic-modal.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="modal-body">
     <img
-    src="https://via.placeholder.com/150"
+    [src]="nid_doc"
     class="card-img-top"
     alt="Profile Picture"
   />
