--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -128,24 +128,18 @@
         <ng-template ngbNavContent>
           <div class="card mt-3">
             <form class="card-body">
-              <div class="form-group">
-                <label for="email" class="p-1">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
-
-              <div class="w-100">
+              <form [formGroup]="form" class="w-100">
                 <div class="form-group mt-1">
-                    <label for="password" class="p-1">Verification Code</label>
-                    <ng-otp-input [config]="otpConfig"></ng-otp-input>
-                    <small class="text-muted">A code has been sent to <b>nsengvalens4@gmail.com</b></small>
+                    <label for="password" class="p-1">Old Password</label>
+                    <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
                   </div>
                   <div class="form-group mt-1">
-                    <label for="password" class="p-1">New Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password">
+                    <label for="password1" class="p-1">New Password</label>
+                    <input type="password" class="form-control" id="password1" formControlName="new_password" placeholder="New Password">
+                    <small class="text-danger" *ngIf="passwordErrorMessage">{{passwordErrorMessage}}</small>
                   </div>
-              </div>
-              
-              <button type="submit" class="btn btn-primary btn-block mt-3 w-100">Update Password</button>
+              </form>
+              <button type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="changePassword()">Update Password</button>
             </form>
             
           </div>
