--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,6 +5,6 @@
             Welcome to UMS
         </div>
         <br>
-        <a routerLink="../profile" *ngIf="!profile?.last_name">Your account is not completed yet, click here to complete your profile!</a>
+        <a routerLink="../profile" *ngIf="!profile?.last_name">Your account is not yet completed, click here to complete your profile!</a>
     </div>
 </div>
