--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -55,7 +55,7 @@
             </td>
             <td class="d-flex align-item-center">
               <button class="a-btn me-2 text-info" (click)="verifyUser(user)">Verification</button> | 
-              <button class="a-btn ms-2 text-danger" (click)="deleteUser(user.id)">Delete</button>
+              <button class="a-btn ms-2 text-danger">Delete</button>
             </td>
           </tr>
         </tbody>
