--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -31,6 +31,11 @@
 
           <button *ngIf="!is_code_sent" type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="sendOtp()">Reset password</button>
           <button *ngIf="is_code_sent" type="button" class="btn btn-primary btn-block mt-3 w-100" (click)="onSubmit()">Proceed</button>
+          
+          <div class="_loading w-100 d-flex justify-content-center">
+            <img class="loading-img" *ngIf="isLoading" src="../../../assets/Loading_icon.gif" alt="">
+          </div>
+
         </div>
       </div>
       <div class="text-center justify-content-between d-flex mt-3">
